Bug 90435 - [CRASH] Nice to reproduce crash with Print Preview > Esc > Format Page
Summary: [CRASH] Nice to reproduce crash with Print Preview > Esc > Format Page
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.0.0.beta1
Hardware: All All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2 tar...
Keywords: bibisected, bisected, haveBacktrace, regression
: 90563 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-04-03 15:02 UTC by Cor Nouws
Modified: 2016-10-25 19:20 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
test document for crash (19.86 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-04-03 15:03 UTC, Cor Nouws
Details
bt with debug symbols (master sources) (5.95 KB, text/plain)
2015-04-03 20:59 UTC, Julien Nabet
Details
bt from transactionmanager.cxx (10.38 KB, text/plain)
2015-04-03 21:01 UTC, Julien Nabet
Details
console bt with master sources (13.42 KB, text/plain)
2015-04-03 21:21 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2015-04-03 15:02:37 UTC
I'll attach the document.

How to Crash:	
		
1	type Ctrl+Shft+O  	Page preview
2	type ESC		Close Page preview
3	Alt+O-P			Format Page - through the menu
Comment 1 Cor Nouws 2015-04-03 15:03:33 UTC
Created attachment 114587 [details]
test document for crash
Comment 2 Cor Nouws 2015-04-03 15:05:11 UTC
Crashes in 4.4.0 beta1, 4.4.2.2 and daily recent

Command line returns
  pure virtual method called
  terminate called without an active exception
Comment 3 A (Andy) 2015-04-03 15:07:12 UTC
Reproducible with LO 4.4.1.2, Win 8.1
Comment 4 Cor Nouws 2015-04-03 15:13:29 UTC
Thanks for confirming Andy.
I would not call it critical. I've no idea how to create a spreadsheet that behaves the same ;) So I guess it's a rather exceptional situation.

Cheers,
Comment 5 Cor Nouws 2015-04-03 15:21:35 UTC
4.3.6.1 does not crash.. regression
Comment 6 Julien Nabet 2015-04-03 20:59:40 UTC
Created attachment 114594 [details]
bt with debug symbols (master sources)

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 7 Julien Nabet 2015-04-03 21:01:03 UTC
Created attachment 114595 [details]
bt from transactionmanager.cxx

I also noticed this console log:
warn:fwk:7980:1:framework/source/fwi/threadhelp/transactionmanager.cxx:265: TransactionManager...: Owner instance stand in close method. Call was rejected!

So I attached bt from this point.
Comment 8 Julien Nabet 2015-04-03 21:06:51 UTC
Argh! Sorry guys, bts are not for this one! :-(
Comment 9 Julien Nabet 2015-04-03 21:21:17 UTC
Created attachment 114599 [details]
console bt with master sources

I started from scratch and reproduced this.

I attached error/warn console logs at each step + bt.
Comment 10 Cor Nouws 2015-04-03 21:46:14 UTC
thanks for the bt Julien!
Comment 11 Matthew Francis 2015-04-04 00:38:23 UTC
It's another one from one of our old favourites:

    commit 7d9bb549d498d6beed2c4050c402d09643febdfa
    Author:     Armin Le Grand <alg@apache.org>
    AuthorDate: Mon Jun 2 15:00:50 2014 +0000
    Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
    CommitDate: Tue Jul 1 13:30:09 2014 +0200
    
        Related: #i124638# Second step of DrawingLayer FillAttributes...
Comment 12 famo 2015-04-27 09:47:37 UTC
Also reproducible with LO 4.4.2.2 on linux 64-bit

And yes its not with every spreadsheet, but I have at least two... :-/
Comment 13 m_a_riosv 2015-05-04 21:16:21 UTC
*** Bug 91081 has been marked as a duplicate of this bug. ***
Comment 14 Philippe Jung 2015-05-05 07:19:38 UTC
With 5.0.0 master, Format -> Page leads to:

warn:legacy.osl:3605:1:svl/source/items/itempool.cxx:654: unknown WhichId - cannot put item
soffice.bin: /home/philippe/src/git-repo/libreoffice/core/svl/source/items/poolio.cxx :708 : sal_uInt16 SfxItemPool::GetIndex_Impl(sal_uInt16) const:  l'assertion « false && "missing bounds check before use" » a échoué.

Program received signal SIGABRT, Aborted.
0x00007ffff7519cc9 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
56	../nptl/sysdeps/unix/sysv/linux/raise.c: Aucun fichier ou dossier de ce type.
(gdb)  bt
#0  0x00007ffff7519cc9 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#1  0x00007ffff751d0d8 in __GI_abort () at abort.c:89
#2  0x00007ffff7512b86 in __assert_fail_base (fmt=0x7fffdc1fa05f "%s%s%s :%u : %s%s l'assertion « %s » a échoué.\n%n", 
    assertion=assertion@entry=0x7ffff427a0b0 "false && \"missing bounds check before use\"", 
    file=file@entry=0x7ffff427a060 "/home/philippe/src/git-repo/libreoffice/core/svl/source/items/poolio.cxx", line=line@entry=708, 
    function=function@entry=0x7ffff427a500 <SfxItemPool::GetIndex_Impl(unsigned short) const::__PRETTY_FUNCTION__> "sal_uInt16 SfxItemPool::GetIndex_Impl(sal_uInt16) const") at assert.c:92
#3  0x00007ffff7512c32 in __GI___assert_fail (assertion=0x7ffff427a0b0 "false && \"missing bounds check before use\"", 
    file=0x7ffff427a060 "/home/philippe/src/git-repo/libreoffice/core/svl/source/items/poolio.cxx", line=708, 
    function=0x7ffff427a500 <SfxItemPool::GetIndex_Impl(unsigned short) const::__PRETTY_FUNCTION__> "sal_uInt16 SfxItemPool::GetIndex_Impl(sal_uInt16) const") at assert.c:101
#4  0x00007ffff41fcf47 in SfxItemPool::GetIndex_Impl(unsigned short) const ()
   from /home/philippe/src/git-repo/libreoffice/core/instdir/program/libsvllo.so
#5  0x00007ffff41ece9a in SfxItemPool::Put(SfxPoolItem const&, unsigned short) ()
   from /home/philippe/src/git-repo/libreoffice/core/instdir/program/libsvllo.so
#6  0x00007ffff41f8c83 in SfxItemSet::Put(SfxPoolItem const&, unsigned short) ()
   from /home/philippe/src/git-repo/libreoffice/core/instdir/program/libsvllo.so
#7  0x00007fffc9b4444f in setSvxBrushItemAsFillAttributesToTargetSet(SvxBrushItem const&, SfxItemSet&) ()
   from /home/philippe/src/git-repo/libreoffice/core/instdir/program/../program/libsvxcorelo.so
#8  0x00007fffae8f5fc9 in SvxPageDescPage::ResetBackground_Impl (this=0x1f2d010, rSet=...)
    at /home/philippe/src/git-repo/libreoffice/core/cui/source/tabpages/page.cxx:1332
#9  0x00007fffae8f27a6 in SvxPageDescPage::Reset (this=0x1f2d010, rSet=0x1abed10)
    at /home/philippe/src/git-repo/libreoffice/core/cui/source/tabpages/page.cxx:646
#10 0x00007ffff475140b in SfxTabDialog::ActivatePageHdl(TabControl*) () from /home/philippe/src/git-repo/libreoffice/core/instdir/program/libsfxlo.so
#11 0x00007ffff1e221e9 in Link<void*, long>::Call (this=0x1ef57c8, data=0x1ef5540)
    at /home/philippe/src/git-repo/libreoffice/core/include/tools/link.hxx:141
#12 0x00007ffff2021c88 in TabControl::ActivatePage (this=0x1ef5540) at /home/philippe/src/git-repo/libreoffice/core/vcl/source/control/tabctrl.cxx:1626
#13 0x00007ffff2023a48 in TabControl::calculateRequisition (this=0x1ef5540)
Comment 15 Commit Notification 2015-06-03 21:07:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8ae25bbc092254f680e2976873f15bdbc26615ef

Resolves: tdf#90435 secondary pool set to that of temp docs drawing layers

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2015-06-04 08:21:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fbcd55ea26b4536e7611a44fc63b79733b82b81e&h=libreoffice-5-0

Resolves: tdf#90435 secondary pool set to that of temp docs drawing layers

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Caolán McNamara 2015-06-04 19:43:41 UTC
*** Bug 90563 has been marked as a duplicate of this bug. ***
Comment 18 Commit Notification 2015-06-11 09:54:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cbef9bda246c13dcad27bf8205930fc16b3e0265&h=libreoffice-4-4

Resolves: tdf#90435 secondary pool set to that of temp docs drawing layers

It will be available in 4.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Robinson Tryon (qubit) 2015-12-17 08:51:42 UTC Comment hidden (obsolete)