Resolves: tdf#90435 secondary pool set to that of temp docs drawing layers

overwriting the original one, and when the temp doc goes away then its drawing
layer goes away autoamtically settings the secondary pools of the other pools
it is a secondary of back to 0

(see also tdf#87245)

Change-Id: Ie6dd8d615f81cf4d4776eaeac1cc2507b2abaa37